--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,253 @@
-h1 {
-  color: white;
-  background-color: black;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+p {
+  margin: 0;
+}
+
+button {
+  cursor: pointer;
+  font: inherit;
+}
+
+body {
+  min-height: 100vh;
+  scroll-behavior: smooth;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+  font-size: 16px;
+  font-family: "Work Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.app-container {
+  display: flex;
+  flex-direction: row;
+  min-height: 100vh;
+}
+
+.hero {
+  flex: 1;
+  background-color: lightseagreen;
+}
+
+.form {
+  display: flex;
+  flex: 1;
+  background-color: #fff;
+}
+
+.question-container,
+.result-container {
+  margin: auto auto;
+  width: 450px;
+  padding: 2rem 2rem 5rem;
+  position: relative;
+}
+
+.question-container .step-progress {
+  height: 2px;
+  background-color: lightsalmon;
+  border-radius: 1px;
+  transition: width 0.3s;
+  margin-bottom: 1.5rem;
+}
+
+.question-container .step-label {
+  font-size: 12px;
+  font-weight: 600;
+  color: #afafaf;
+  letter-spacing: 0.15em;
+}
+
+.question-container h3 {
+  font-size: 1.2rem;
+  margin: 0.5rem 0 1.5rem;
+}
+
+.choice-container button {
+  appearance: none;
+  border: none;
+  background: none;
+  outline: none;
+  display: flex;
+  align-items: center;
+  margin-bottom: 1rem;
+  position: relative;
+  text-align: left;
+}
+
+.choice-container button span {
+  flex: 1;
+  color: #222;
+  font-size: 0.875rem;
+}
+
+.choice-container button::before {
+  content: "";
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 1px solid #ccc;
+  margin-right: 0.75rem;
+  background-color: #fff;
+  transition: background-color 0.3s;
+}
+
+.choice-container button:hover::before,
+.choice-container button:focus::before {
+  border-width: 2px;
+}
+
+.choice-container button.active::before {
+  background-color: lightseagreen;
+  border-width: 0;
+}
+
+.choice-container button::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 20px;
+  margin-top: -6px;
+  width: 5px;
+  height: 10px;
+  border: solid #fff;
+  border-width: 0 2px 2px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.pager-container {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  padding: 2rem;
+
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.error-message {
+  font-size: 0.75rem;
+  color: firebrick;
+}
+
+.buttons {
+  margin-left: auto;
+}
+
+.button {
+  border: none;
+  background-color: lightseagreen;
+  color: #333;
+  border-radius: 3px;
+  color: #fff;
+  padding: 0.5em 0.85em;
+  font-size: 1rem;
+  outline: none;
+  display: inline-block;
+}
+
+.button:hover {
+  background-color: lightsalmon;
+  color: #fff;
+}
+
+.back {
+  background-color: #e0e0e0;
+  color: #333;
+  margin-right: 0.5rem;
+}
+
+.result-message {
+  text-align: center;
+  margin-bottom: 3rem;
+}
+
+.result-message em {
+  font-style: normal;
+  font-size: 3rem;
+  font-weight: 600;
+  display: block;
+  line-height: 3rem;
+  margin: 1rem 0;
+}
+
+.result-message span {
+  font-size: 1.5rem;
+}
+
+.result-actions {
+  text-align: center;
+}
+
+.result-retake {
+  text-decoration: none;
+}
+
+/* Animations */
+.animated {
+  animation-duration: 1s;
+  animation-fill-mode: both;
+}
+
+@media (print), (prefers-reduced-motion: reduce) {
+  .animated {
+    animation-duration: 1ms !important;
+    transition-duration: 1ms !important;
+    animation-iteration-count: 1 !important;
+  }
+}
+
+@keyframes jello {
+  from,
+  11.1%,
+  to {
+    transform: translate3d(0, 0, 0);
+  }
+
+  22.2% {
+    transform: skewX(-12.5deg) skewY(-12.5deg);
+  }
+
+  33.3% {
+    transform: skewX(6.25deg) skewY(6.25deg);
+  }
+
+  44.4% {
+    transform: skewX(-3.125deg) skewY(-3.125deg);
+  }
+
+  55.5% {
+    transform: skewX(1.5625deg) skewY(1.5625deg);
+  }
+
+  66.6% {
+    transform: skewX(-0.78125deg) skewY(-0.78125deg);
+  }
+
+  77.7% {
+    transform: skewX(0.390625deg) skewY(0.390625deg);
+  }
+
+  88.8% {
+    transform: skewX(-0.1953125deg) skewY(-0.1953125deg);
+  }
+}
+
+.jello {
+  animation-name: jello;
+  transform-origin: center;
 }
