--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,11 @@ p {
   margin: 0;
 }
 
+img {
+  max-width: 100%;
+  display: block;
+}
+
 button {
   cursor: pointer;
   font: inherit;
@@ -34,9 +39,35 @@ body {
   min-height: 100vh;
 }
 
+@media only screen and (max-width: 768px) {
+  .app-container {
+    flex-direction: column;
+  }
+}
+
 .hero {
   flex: 1;
   background-color: lightseagreen;
+  display: flex;
+  flex-direction: column;
+  padding: 2rem 2rem 5rem;
+}
+
+.hero .logo {
+  width: 200px;
+  /* max-width: 50%; */
+  margin: auto auto 0;
+  opacity: 0.7;
+}
+
+.hero h1 {
+  color: #fff;
+  margin: 2rem auto auto;
+  font-size: 1.5rem;
+  font-weight: 400;
+  padding: 0 2rem;
+  text-align: center;
+  max-width: 520px;
 }
 
 .form {
@@ -49,6 +80,7 @@ body {
 .result-container {
   margin: auto auto;
   width: 450px;
+  max-width: 100%;
   padding: 2rem 2rem 5rem;
   position: relative;
 }
