fix sharing issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -228,6 +228,10 @@ body {
   text-decoration: none;
 }
 
+.result-share {
+  text-decoration: none;
+}
+
 /* Animations */
 .animated {
   animation-duration: 1s;
